--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bunyan": "~0.21.4",
     "posix-getopt": "~1.0.0",
     "libxmljs": "~0.8.1",
-    "request": "~2.27.0"
+    "request": "~2.27.0",
+    "assert-plus": "~0.1.4"
   },
   "devDependencies": {
     "nodeunit": "0.8.1"
